tests/neg/i9014.check
-- Error: tests/neg/i9014.scala:4:25 -----------------------------------------------------------------------------------
4 |  val tests = summon[Bar] // error
  |                         ^
  |                     no implicit argument of type Bar was found for parameter x of method summon in object Predef.
  |                     I found:
  |
  |                         Bar.given_Bar
  |
  |                     But given instance given_Bar in object Bar does not match type Bar.
